11_K8s_Ingress_ConfigMaps_Secrets/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nginx:alpine
          ports:
            - containerPort: 80
          command:
            - /bin/sh
            - -c
            - |
              cat > /usr/share/nginx/html/index.html <<HTML
              <h1>FRONTEND</h1>
              <p>APP_NAME     = $APP_NAME</p>
              <p>STUDENT_NAME = $STUDENT_NAME</p>
              HTML
              nginx -g 'daemon off;'
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
